--- a/bin/linalg.css
+++ b/bin/linalg.css
@@ -19,3 +19,11 @@ body {
   width: 80px;
   text-align: center;
 }
+
+.equation {
+  display: flex;
+}
+
+.equation .item {
+  align-self: center;
+}
