--- a/repl.css
+++ b/repl.css
@@ -9,6 +9,12 @@ body {
   color: #fff;
 }
 
+
+.title {
+  margin-left: 33px;
+  font-size: 18px;
+}
+
 .repl-wrapper {
   position: fixed;
   font-family: monospace;
@@ -38,37 +44,30 @@ body {
   padding: 0;
   box-sizing: border-box;
   appearance: none;
-  min-width: calc(100% - 32px);
   resize: none;
-}
-
-.repl-wrapper .repl-input:before {
-  content: '> ';
-  color: #FC3565;
-  vertical-align: top;
-}
-
-.repl-wrapper .command:before {
-  content: '> ';
-  color: #FC3565;
-  vertical-align: top;
-}
-
-.repl-wrapper .command {
   width: 100%;
-  display: block;
+}
+
+.repl-wrapper .wrapper {
+  display: flex;
+  align-items: baseline;
   white-space: pre;
+  width: 100%;
+}
+
+.repl-wrapper .output {
+}
+
+.repl-wrapper .input-prompt {
+  color: #35fc4f;
+  vertical-align: top;
+}
+
+.repl-wrapper .output-prompt {
+  color: #FC3565;
+  vertical-align: top;
 }
 
 .repl-wrapper .repl-inner {
   padding: 5px 18px;
-}
-
-.particles-js-canvas-el {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 0;
 }
