FIX: Serve KaTex myself. Small fixes
It is a shame, but am I GDPR compliant if I don't do this?

--- a/repl/repl.css
+++ b/repl/repl.css
@@ -50,7 +50,7 @@ body {
 
 .repl-wrapper .wrapper {
   display: flex;
-  align-items: baseline;
+  /* align-items: baseline; */
   white-space: pre;
   width: 100%;
 }
